# literature-recommendation

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml
backend/: README.md  pyproject.toml
backend/app/: main.py
backend/app/api/: routes.py
backend/app/core/: config.py
backend/app/db/: bootstrap.py  session.py
backend/app/embeddings/: __init__.py  provider.py
backend/app/ingestion/: canonicalization.py  chunking.py  cleaning.py  gutenberg.py  metadata.py  pipeline.py  quality_gate.py  starter_corpus.py
backend/app/models/: __init__.py  classification.py  corpus.py  embedding.py  interaction.py  message.py  saved.py  submission.py  user.py  work.py
backend/app/recommender/: content_based.py  latent_factors.py  profile.py  quality.py  vector_math.py
backend/app/schemas/: accounts.py  interactions.py  recommendations.py
backend/app/services/: accounts.py  classification.py  daily_features.py  embedding_jobs.py  embeddings.py  interaction_logging.py  processed_corpus.py  processed_embeddings.py  processed_latent_factors.py  recommendations.py  storage.py  vector_search.py
backend/tests/: test_accounts.py  test_bulk_gutenberg_ingestion.py  test_chunking.py  test_cleaning.py  test_daily_features.py  test_database_models.py  test_embedding_generation.py  test_interaction_logging.py  test_recommendation_infrastructure.py  test_starter_corpus_ingestion.py
docs/: architecture.md  data-pipeline.md  deploy-railway-vercel-cloudflare.md  deployment-infrastructure.md  recommendation-roadmap.md
frontend/: README.md  package.json  (+3 more)
(+65 files in other folders)
