[project]
name = "literature-recommender-backend"
version = "0.1.0"
description = "FastAPI backend for personalized literature recommendations."
requires-python = ">=3.11"
dependencies = [
  "asyncpg>=0.29.0",
  "beautifulsoup4>=4.12.0",
  "boto3>=1.34.0",
  "fastapi>=0.115.0",
  "greenlet>=3.0.0",
  "httpx>=0.27.0",
  "numpy>=1.26.0",
  "openai>=2.0.0",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.3.0",
  "pgvector>=0.3.0",
  "psycopg[binary]>=3.2.0",
  "sqlalchemy>=2.0.0",
  "uvicorn[standard]>=0.30.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "ruff>=0.5.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"
